fix for share button in overlay with overflow

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,18 @@ h4 {
   margin-bottom: 10px;
   margin-right: -6px;
 }
+.fbShreBox{
+  position: absolute;
+  top: 14px;
+  left: 12px;
+  overflow-x:visible;
+  overflow-y:visible;
+}
+.fbShreBox *{
+  overflow-x:visible;
+  overflow-y:visible;
+}
+
 /*Mobile support*/
 @media only screen 
   and (min-device-width: 320px) 
